# mango

./: .env.example  Cargo.toml  Dockerfile  README.md  Rocket.toml
admin/: Cargo.toml
db/: Cargo.toml
db/migrations/2022-03-26-160650_basic_projects/: up.sql
db/migrations/2022-03-27-144042_page_configs/: up.sql
db/migrations/2022-03-27-161327_ip_log/: down.sql  up.sql
db/migrations/2022-04-09-142854_highlights/: up.sql
db/migrations/2022-04-15-182009_more_project_info/: down.sql  up.sql
db/src/: model.rs
migrations/2022-04-09-142854_highlights/: down.sql
migrations/2022-06-11-195721_project_months/: down.sql  up.sql
migrations/2022-06-15-192404_link_name/: down.sql  up.sql
migrations/2022-06-15-195343_link_border/: down.sql  up.sql
src/: main.rs
src/db/: model.rs  schema.rs
src/fairings/: admin.rs  db.rs  frontend.rs  handlebars.rs  ip_log.rs  mod.rs  prelude.rs
src/fairings/admin/: api.rs  frontend.rs  mod.rs
src/guards/: admin.rs  db.rs  mod.rs  page_config.rs  page_configs.rs  prelude.rs
templates/: base-head.html.hbs  base-styles.hbs  index.html.hbs  nav.html.hbs  projects.html.hbs
templates/admin/: index.html.hbs  ip-log.html.hbs
