[package]
name = "mango"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["admin", "db"]

[dependencies]
tokio = "1"
dotenv = "0"
db = { path = "./db" }

ipnetwork = "0"

rocket = { version = "0.5.0-rc.2", features = ["json"] }

diesel = "1"
diesel_migrations = "1"
serde = "1"
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }

handlebars = "4"
serde_json = "1"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
